--- a/web/src/app/app-layout/app-layout.component.html
+++ b/web/src/app/app-layout/app-layout.component.html
@@ -18,4 +18,8 @@
   </div>
 </nav>
 
-<router-outlet></router-outlet>
+<br><br><br>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
