--- a/web/src/app/users/add-user/add-user.component.html
+++ b/web/src/app/users/add-user/add-user.component.html
@@ -1,3 +1,12 @@
-<p>
-  add-user works!
-</p>
+<button (click)="goBack()" class="btn btn-outline-success float-right">Go Back</button>
+<h3>Add User</h3>
+<hr>
+<div class="form-group">
+  <label for="exampleInputEmail1">Username</label>
+  <input #userUsername type="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Username">
+</div>
+<div class="form-group">
+  <label for="exampleInputPassword1">Password</label>
+  <input #userPassword type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" >
+</div>
+<button (click)="addUser(userUsername.value, userPassword.value)" class="btn btn-primary">Add User</button>
