--- a/web/src/app/users/detail-user/detail-user.component.html
+++ b/web/src/app/users/detail-user/detail-user.component.html
@@ -1,3 +1,18 @@
-<p>
-  detail-user works!
-</p>
+<button (click)="goBack()" class="btn btn-outline-primary float-right">Go Back</button>
+<h3>User Detail</h3>
+<hr>
+<div class="form-group">
+  <label for="exampleInputEmail1">Id</label>
+  <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Id" [disabled]="true" [(ngModel)]="user.id">
+</div>
+<div class="form-group">
+  <label for="exampleInputEmail1">Username</label>
+  <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Username" [disabled]="true" [(ngModel)]="user.username">
+</div>
+<div class="form-group">
+  <label for="exampleInputPassword1">Password</label>
+  <input type="password" class="form-control" placeholder="Password" [(ngModel)]="user.password">
+</div>
+
+<button (click)="updateUser(user)" class="btn btn-outline-success">Update User</button>
+<button (click)="deleteUser(user)" class="btn btn-outline-danger float-right">Delete User</button>
