--- a/web/src/app/users/list-users/list-users.component.html
+++ b/web/src/app/users/list-users/list-users.component.html
@@ -1,6 +1,8 @@
+<a routerLink="add" class="btn btn-outline-success float-right">Add User</a>
 <h3>Users List</h3>
+<hr>
 <ul class="list-group">
-  <a class="list-group-item list-group-item-action" *ngFor="let user of users" >
+  <li class="list-group-item list-group-item-action" *ngFor="let user of users" (click)="gotoDetail(user.id)">
     {{user.username}}
-  </a>
+  </li>
 <ul>
