--- a/web/src/app/users/detail-user/detail-user.component.html
+++ b/web/src/app/users/detail-user/detail-user.component.html
@@ -3,11 +3,11 @@
 <hr>
 <div class="form-group">
   <label for="exampleInputEmail1">Id</label>
-  <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Id" [disabled]="true" [(ngModel)]="user.id">
+  <input type="text" class="form-control" placeholder="Id" [disabled]="true" [(ngModel)]="user.id">
 </div>
 <div class="form-group">
   <label for="exampleInputEmail1">Username</label>
-  <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Username" [disabled]="true" [(ngModel)]="user.username">
+  <input type="text" class="form-control" placeholder="Username" [disabled]="true" [(ngModel)]="user.username">
 </div>
 <div class="form-group">
   <label for="exampleInputPassword1">Password</label>
