--- a/web/src/app/users/list-users/list-users.component.html
+++ b/web/src/app/users/list-users/list-users.component.html
@@ -2,7 +2,7 @@
 <h3>Users List</h3>
 <hr>
 <ul class="list-group">
-  <li class="list-group-item list-group-item-action" *ngFor="let user of users" (click)="gotoDetail(user.id)">
+  <li class="list-group-item list-group-item-action" *ngFor="let user of users" routerLink="detail/{{user.id}}">
     {{user.username}}
   </li>
 <ul>
