--- a/web/src/app/auth/login/login.component.html
+++ b/web/src/app/auth/login/login.component.html
@@ -12,6 +12,8 @@
       <a class="float-right" routerLink="/auth/signup">Sign Up</a>
       <br>
       <a class="float-right" routerLink="/auth/recover">Recover Password</a>
+      <br>
+      <a class="float-right" routerLink="/auth/admin">Admin Login</a>
 
       <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
     </div>
