--- a/web/src/app/app-layout/app-layout.component.html
+++ b/web/src/app/app-layout/app-layout.component.html
@@ -5,8 +5,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/users">Users <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/users">Users</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/auth/logout">Log Out</a>
