--- a/web/src/app/app-layout/app-layout.component.html
+++ b/web/src/app/app-layout/app-layout.component.html
@@ -5,11 +5,13 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/users">Users</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/auth/logout">Log Out</a>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">{{currentUser.username}}</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown01">
+          <!-- <a class="dropdown-item" routerLink="/profile">Profile</a> -->
+          <a class="dropdown-item" routerLink="/auth/logout">Log Out</a>
+        </div>
       </li>
     </ul>
   </div>
